# Nomospline

./: .gitignore  CMakeLists.txt  LICENSE  README.md  images.qrc  main.cpp  shaders.qrc
docs/: BREP.md  main.md
docs/.obsidian/: workspace  workspace.json
examples/BREP/cylinder/: cylinder.json
examples/BREP/cylinder_rotated/: cylinder.json
examples/BREP/hard/: hard.json
include/: logger.h  timer.h
include/engine/: BREPLoader.h  Camera.h  Delaunay.h  FileLoader.h  GeometryEngine.h  Mesh.h  MeshLoader.h  NURBSEngine.h  SceneData.h  SplineLoader.h  Tesselator.h
include/render_object/: BackgroundRenderer.h  GizmosRenderer.h  MeshRenderer.h  NormalRenderer.h  PointRenderer.h  RenderObject.h  SplineRenderer.h
include/structures/: BREP.h  Mesh.h  NURBS.h  NURBSCurve.h  PolylineCurve.h  SplineUtils.cpp  SplineUtils.h
include/widget/: ConfigureWidget.h  MainWindow.h  OpenGLWindow.h  WindowUtils.h  scene.h
qml/: IntersectionDialog.qml  Settings.qml  main.qml
shaders/: fshader.glsl
shaders/background/: fshader.glsl  vshader.glsl
shaders/gizmos/: vshader.glsl
shaders/lines/: fshader.glsl  vshader.glsl
shaders/mesh/: fshader.glsl  vshader.glsl
shaders/normals/: fshader.glsl  gshader.glsl  vshader.glsl
shaders/points/: vshader.glsl
shaders/simple_mesh/: vshader.glsl
src/: logger.cpp  timer.cpp
src/engine/: BREPLoader.cpp  Camera.cpp  GeometryEngine.cpp  MeshLoader.cpp  SceneData.cpp  SplineLoader.cpp  Tesselator.cpp
src/render_object/: BackgroundRenderer.cpp  GizmosRenderer.cpp  MeshRenderer.cpp  NormalRenderer.cpp  PointRenderer.cpp  RenderObject.cpp  SplineRenderer.cpp
src/structures/: BREP.cpp  NURBS.cpp  SplineUtils.cpp
src/widget/: ConfigureWidget.cpp  MainWindow.cpp  OpenGLWindow.cpp  WindowUtils.cpp  scene.cpp
tooling/: ex_torus.py  main.py  rotator.py  trim_single.py
